Changelog for mk-table-checksum and mk-checksum-filter:

2010-05-03: version 1.2.14

   * Added --throttle-method, permit throttling by lag of all slaves (issue 67).
   * Checksum queries still caused fatal warnings on MySQL 5.1 (issue 186).

2010-04-01: version 1.2.13

   * Checksum queries caused fatal warnings on MySQL 5.1 (issue 186).
   * Added DSN OPTIONS section to POD (issue 55).
   * Tool crashed if no DSN h part was specified (issue 947).

2010-03-01: version 1.2.12

   * --engines did not work (issue 891).
   * Index names with commas caused a crash (issue 388).

2010-01-06: version 1.2.11

   * The script crashed immediately on some OS or versions of Perl (issue 733).

2009-12-02: version 1.2.10

   * Removed REPLACE INTO for checking replicate table (issue 365).

2009-10-30: version 1.2.9

   * --set-vars did not work (issue 597).
   * Command line options did not override config file options (issue 617).

2009-08-31: version 1.2.8

   * --arg-table was not used to determine algorithm (issue 509).

2009-07-31: version 1.2.7

   * Added RISKS section to POD (issue 538).
   * The script crashed immediately on Windows (issue 531).
   * Added --recursion-method option (issue 181).
   * Added modulo and offset to list of overridable arguments (issue 467).

2009-06-02: version 1.2.6

   * Options not allowed with --schema are no longer silently ignored.
   * Organized options into groups (see --help output).
   * Removed the --argtable long option.  Use --arg-table instead.
   * Removed the --askpass long option.  Use --ask-pass instead.
   * Removed the --chunksize long option.  Use --chunk-size instead.
   * Removed the --createreplicate option.  Use --create-replicate-table.
   * Removed the --emptyrepltbl option.  Use --empty-replicate-table.
   * Removed the --engine option.  Use --engines.
   * Removed the --explainhosts option.  Use --explain-hosts.
   * Removed the --ignorecols option.  Use --ignore-columns.